name:                filtrable
version:             0.1.0.5
synopsis:            Class of filtrable containers
homepage:            https://github.com/strake/filtrable.hs
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.9.2
tested-with:         GHC ==7.8.*,
                     GHC ==7.10.*,
                     GHC ==7.12.*,
                     GHC ==8.0.*

library
  exposed-modules:     Data.Filtrable
  build-depends:       base >=4.7 && <5
